--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "zod": "^4.1.13"
+    "react-hot-toast": "^2.6.0",
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
