--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
