--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^13.6.0",
     "js-cookie": "^3.0.5",
     "mongodb": "^7.0.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.7",
     "razorpay": "^2.9.6",
     "react": "19.2.0",
